@@ -113,6 +113,10 @@ Binary.prototype.length = function length () {
   return this.position;
 };
 
+Binary.prototype.toJSON = function() {
+  return this.buffer != null ? this.buffer.toString('base64') : '';
+}
+
 Binary.BUFFER_SIZE = 256;
 
 /**
