@@ -7,3 +7,7 @@ function Double(value) {
 Double.prototype.valueOf = function() {
   return this.value;
 };
+
+Double.prototype.toJSON = function() {
+  return this.value;
+}
